# Templates

./: README.md
yew-full-stack/: Makefile.toml  README.md  run.sh
yew-full-stack/server/: Cargo.toml  Makefile.toml
yew-full-stack/server/src/: main.rs
yew-full-stack/ui/: Cargo.toml  Makefile.toml
yew-full-stack/ui/src/: app.rs  lib.rs
yew-full-stack/ui/static/: index.html
